# Watermelon-2

./: .gitignore  APP_BEHAVIOR.md  INTERACTION_RULES.md  PRODUCT_VISION.md  README.md  UI_STRUCTURE.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: with-vs-dev.cmd
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  helpers.rs  lib.rs  main.rs  models.rs  server.rs  state.rs
src/components/: AppShell.tsx  Icons.tsx  QueueStrip.tsx  ThemedSelect.tsx  TimelineEditor.test.tsx  TimelineEditor.tsx  TopBar.tsx
src/hooks/: useAppModel.ts
src/lib/: api.ts  format.ts
src/pages/: DownloadsPage.test.tsx  DownloadsPage.tsx  HomePage.test.tsx  HomePage.tsx  SettingsPage.tsx
