[package]
name = "watermelon_2"
version = "0.1.0"
description = "Watermelon 2 background browser host"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "watermelon_2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
include_dir = "0.7"
mime_guess = "2"
regex = "1"
rfd = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["net"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
